...
                    context,
                    CupertinoPageRoute(
                      builder: ((context) => const JoinLive()),
                    ),
                  );
                },
                mainText: "Join Live",
                subText: '',
                height: 150,
                width: 150,
              ),
              const SizedBox(width: 15),
              Tiles(
...
