...
          content: const Text(
            'Please sign in to access your Bible reading plans and track your progress.',
            style: TextStyle(color: Color.fromRGBO(200, 200, 200, 1)),
          ),
          actions: <Widget>[
            TextButton(
              child: const Text('Cancel'),
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
            ElevatedButton(
              style: ElevatedButton.styleFrom(
...
