...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const ValueKey('screen-sermons'),
      appBar: AppBar(
        title: Text('Sermons').localized(),
        actions: [
          IconButton(icon: const Icon(Icons.search), onPressed: _openFilters),
        ],
      ),
...
